# libre-presenter

./: .dir-locals.el  .envrc  .gitignore  CHANGELOG.org  CMakeLists.txt  Cargo.nix  Cargo.toml  LICENSE  Makefile  README.org  TODO.org  build.rs  build.sh  cargo.nix  default.nix  diesel.toml  flake.nix  guix.scm  librepresenter.desktop  qhot-profile.json  shell.nix
.cargo/: config.toml
cmake/: FindFFmpeg.cmake  FindLibmpv.cmake  FindYtdlp.cmake
src/: CMakeLists.txt  filemanager.cpp  filemanager.h  imagesqlmodel.cpp  imagesqlmodel.h  main.cpp  mpvhelpers.h  mpvobject.h  present.desktop  presentationsqlmodel.cpp  pressqlmodel.cpp  pressqlmodel.h  qthelper.hpp  resources.qrc  serviceitem.cpp  serviceitem.h  serviceitemmodel.cpp  serviceitemmodel.h  slide.cpp  slide.h  songlistmodel.cpp  songlistmodel.h  songsqlmodel.cpp  songsqlmodel.h  songtext.cpp  songtext.h  thumbnail.h  videosqlmodel.cpp  videosqlmodel.h
src/contents/ui/: LeftDock.qml  MainWindow.qml  main.qml
src/cpp/: filemanager.cpp  imagesqlmodel.cpp  imagesqlmodel.h  presentationsqlmodel.cpp  presentationsqlmodel.h  qsettingscxx.h  serviceitem.cpp  serviceitem.h  serviceitemmodel.cpp  serviceitemmodel.h  slide.cpp  slide.h  slidemodel.cpp  slidemodel.h  slideobject.cpp  slideobject.h  songsqlmodel.cpp  songsqlmodel.h  thumbnail.cpp  videosqlmodel.cpp  videosqlmodel.h
src/cpp/mpv/: mpvobject.cpp  mpvobject.h
src/mpv/: mpvobject.cpp  mpvobject.h
src/qml/: main.qml
src/qml/presenter/: Actions.qml  DragHandle.qml  Header.qml  ImageEditor.qml  LeftDock.qml  Library.qml  LibraryDelegate.qml  LibraryItem.qml  LibraryModel.qml  MainWindow.qml  NewVideo.qml  PanelItem.qml  Presentation.qml  PresentationEditor.qml  PresentationWindow.qml  PreviewSlide.qml  PreviewSlideListDelegate.qml  RangedSlider.qml  ServiceList.qml  Settings.qml  Slide.qml  SlideEditor.qml  SongEditor.qml  VideoEditor.qml  qmldir
src/rust/: Cargo.toml  build.rs  ffmpeg.rs  file_helper.rs  image_model.rs  lib.rs  models.rs  presentation_model.rs  presentation_window.rs  reveal_js.rs  schema.rs  service_item_model.rs  service_thing.rs  settings.rs  slide_model.rs  slide_obj.rs  slide_object.rs  song_model.rs  video_model.rs  video_thumbnail.rs  ytdl.rs
src/rust/entities/: images.rs  mod.rs  prelude.rs  presentations.rs  songs.rs  videos.rs
src/rust/migrations/2023-04-04-164359_library-db/: up.sql
src/rust/src/: cxxqt_object.rs  lib.rs  service_thing.rs
